# USACO_workspace

./: CMakeLists.txt
AStar_PracticeExams/exam1/distribution/: distribution.cpp
AStar_PracticeExams/exam1/haybalestacking/: haybalestacking.cpp
AStar_PracticeExams/exam1/milkingcows/: milkingcows.cpp
AStar_PracticeExams/exam2/initials/: intials.cpp
AStar_PracticeExams/exam2/matchsticks/: matchsticks.cpp
AStar_PracticeExams/exam2/plantremoval/: plantremoval.cpp
AStar_PracticeExams/exam3/lasersandmirrors/: lasers.cpp
AStar_PracticeExams/exam3/squarepastures/: square.cpp
AStar_PracticeExams/exam3/visitingcows/: visitingcows.cpp
AStar_PracticeExams/exam4/lotus/: lotus.cpp
AStar_PracticeExams/exam4/network/: network.cpp
AStar_PracticeExams/exam4/traffic/: traffic.cpp
GoogleKickStart_2022/Practice_1/centauri/: centauri.cpp
GoogleKickStart_2022/Practice_1/h_index/: h_index.cpp
GoogleKickStart_2022/Practice_1/hex/: hex.cpp
GoogleKickStart_2022/Practice_1/sample/: sample.cpp
GoogleKickStart_2022/Practice_2/building/: building.cpp
GoogleKickStart_2022/Practice_2/expressions/: expressions.cpp
GoogleKickStart_2022/Practice_2/parcel/: parcel.cpp
GoogleKickStart_2022/Practice_2/sample/: sample.cpp
GoogleKickStart_2022/Practice_2/sherlock/: sherlock.cpp
HHSProgramming/PR2/binarynumbers/: binarynumber.cpp
HHSProgramming/PR3/disturbedpeople/: disturbedpeople.cpp
HHSProgramming/PR3/playlist/: playlist.cpp
HHSProgramming/PR3/rumor/: rumor.cpp
HHSProgramming/PR4/disturbingwords/: disturbingwords.cpp
HHSProgramming/PR4/shootingpractice/: shootingpractice.cpp
HHSProgramming/PR4/spitting/: spitting.cpp
HHSProgramming/PR5/amateurchemist/: chemist.cpp
HHSProgramming/PR5/coins/: coins.cpp
HHSProgramming/PR5/fishfordinner/: fishfordinner.cpp
HHSProgramming/PR6/kevin/: kevin.cpp
HPI_2022/p1/: p1.cpp
HPI_2022/p10/: p10.cpp
HPI_2022/p2/: p2.cpp
HPI_2022/p4/: p4.cpp
USACO_21-22/Contest 1/closestcowwins/: closest.cpp
USACO_21-22/Contest 1/connectingbarns/: barns.out  connectingbarns.cpp
USACO_21-22/Contest 1/convolutedintervals/: intervals.cpp  intervals.out
USACO_21-22/Contest 2/cereal2/: cereal.cpp
USACO_21-22/Contest 2/frisbee/: frisbee.cpp
USACO_21-22/Contest 2/soulmates/: soulmates.cpp
USACO_21-22/Contest 3/email/: email.cpp  email2.cpp
USACO_21-22/Contest 3/gift/: gift.cpp
USACO_21-22/Contest 3/robot/: robot.cpp  robot1.cpp
USACO_21-22/Contest 4/operation/: operation.cpp
USACO_21-22/Contest 4/subset/: setset.cpp
USACO_21-22/Contest 4/visits/: visits.cpp  visits.in  visits2.cpp
USACO_22-23/Contest_1/: 1.cpp  3.cpp
USACO_22-23/Contest_1/1/: 1.cpp
USACO_22-23/Contest_1/barntree/: barntree.cpp
USACO_22-23/Contest_1/circular/: circular.cpp
USACO_22-23/Contest_1/reconstruct/: reconstruct.cpp
USACO_Practice/ABCs/: ABCs.cpp
USACO_Practice/Acowdemia/: acowdemia.cpp
USACO_Practice/adjdifferences/: adj.cpp
USACO_Practice/amazing/: amazing.cpp
USACO_Practice/boxers/: boxers.cpp
USACO_Practice/capital/: capital.cpp
USACO_Practice/cbarn2/: cbarn2.cpp  cbarn2.out
USACO_Practice/comfortable/: comfortable.cpp
USACO_Practice/convention2/: convention2.cpp
USACO_Practice/cowntagion/: cowntagion.cpp
USACO_Practice/diamondcollector/: diamond.cpp
USACO_Practice/drought/: drought.cpp
USACO_Practice/fenceplanning/: fenceplan.cpp
USACO_Practice/fencesplit/: split.cpp
USACO_Practice/fieldreduction/: reduce.cpp
USACO_Practice/flightcheck/: flightcheck.cpp
USACO_Practice/gcdblackboard/: gcd.cpp
USACO_Practice/haybalestacking/: haybalestacking.cpp
USACO_Practice/hossam_trainee/: hossam_trainee.cpp
USACO_Practice/kingspuzzle/: kingspuzzle.cpp
USACO_Practice/knapsack/: knapsack.cpp  knapsack2.cpp
USACO_Practice/lemonadeline/: lemonade.cpp
USACO_Practice/luckychains/: lucky.cpp
USACO_Practice/magicship/: magicship.cpp
USACO_Practice/median/: median.cpp  median.in
USACO_Practice/moobuzz/: moobuzz.cpp
USACO_Practice/moocast/: moocast.cpp
USACO_Practice/moocast2/: moocast.cpp
USACO_Practice/mooney/: time.cpp
USACO_Practice/mooparticle/: mooparticle.cpp
USACO_Practice/moutains/: mountains.cpp
USACO_Practice/notescaping/: escaping.cpp  escaping2.cpp
USACO_Practice/notimetopaint/: paint.cpp
USACO_Practice/pairedup/: pairup.cpp
USACO_Practice/pasture/: pasture.cpp
USACO_Practice/rangeupdates/: rangeupdates.cpp
USACO_Practice/reststops/: reststops.cpp  reststops.out
USACO_Practice/same_count/: same_count.cpp
USACO_Practice/ski_course/: ski_level.cpp
USACO_Practice/socdist/: socdist.cpp
USACO_Practice/spacedout/: spacedout.cpp
USACO_Practice/stuckinrut/: rut.cpp
USACO_Practice/tasksanddeadline/: tasks.cpp
USACO_Practice/towers/: towers.cpp
USACO_Practice/treediameter/: diamter.cpp
USACO_Practice/whycross/: helpcross.out  whycross.cpp
USACO_Practice/wormsort/: wormsort.cpp
USACO_Practice/yearofthecow/: cowyear.cpp
USACO_Practice/zerosum/: zerosum.cpp
cf/141/beautiful/: beautiful.cpp
cf/141/differences/: differences.cpp
cf/141/tournament/: tournament.cpp
cf/804/a/: a.cpp
cf/804/b/: b.cpp
cf/804/c/: c.cpp
cf/804/d/: d.cpp
cf/hello2023/a/: a.cpp
cf/hello2023/b/: b.cpp
cf/hello2023/c/: c.cpp
othercode/linkedlists/: LinkedList.java  linked.cpp
othercode/template/: dsu.cpp  segtree.cpp  template.cpp
othercode/test/: test.cpp
xcamp/01.09.22/candy/: candy.cpp
xcamp/01.09.22/justgreen/: green.cpp
xcamp/01.09.22/meetingplace/: meeting.cpp
xcamp/01.09.22/wherebessie/: bessie.cpp  where.out
xcamp/01.16.22/USB/: usb.cpp
xcamp/01.16.22/cross/: cross.cpp
xcamp/01.16.22/painting/: painting.cpp  painting1.cpp
xcamp/01.23.22/MazeTacToe/: mazetactoe.cpp
xcamp/01.23.22/dancemooves/: dance.cpp
xcamp/01.23.22/solvemaze/: solve.cpp
xcamp/01.30.22/goodsubarrays/: goodsub.cpp
xcamp/01.30.22/milkvisits/: milkvisits.cpp
xcamp/01.30.22/rental/: rental.cpp
xcamp/02.06.22/berrypicking/: berry.cpp
xcamp/02.06.22/network/: network.cpp
xcamp/02.13.22/cereal/: cereal.cpp
xcamp/02.26.22/: class
xcamp/03.05.22/: class
(+166 files in other folders)
